ISSUE #507 - Fix Licences spelling

--- a/frontend/components/account/pug/account-billing.pug
+++ b/frontend/components/account/pug/account-billing.pug
@@ -19,7 +19,7 @@
 
 					div(layout="row")
 						md-input-container(flex)
-							label Licenses
+							label Licences
 							input(type="number", ng-model="vm.numNewLicenses", min="0", max="1000", required)
 						md-input-container(flex)
 							label Payment (£ / month) **
