--- a/frontend/components/account/pug/over-quota-dialog.pug
+++ b/frontend/components/account/pug/over-quota-dialog.pug
@@ -14,7 +14,7 @@ md-dialog#overQuotaDialog(aria-label="Over quota")
 				=" "
 				a(href="", ng-click="vm.setupAddLicenses()") Billing Page
 				=" "
-				| to add more licenses.
+				| to add more licences.
 
 		.cardInfo(ng-if="vm.userAccount!=vm.account")
 			p There is currently not enough quota to upload this file.
