--- a/frontend/components/account/pug/remove-license-dialog.pug
+++ b/frontend/components/account/pug/remove-license-dialog.pug
@@ -1,7 +1,7 @@
-md-dialog(aria-label="Remove License")
+md-dialog(aria-label="Remove Licence")
 	md-toolbar
 		.md-toolbar-tools
-			h2 Remove License
+			h2 Remove Licence
 			span(flex)
 	md-content(layout-margin, layout="column", layout-align="start")
 		.cardInfo
