--- a/frontend/components/home/css/home.css
+++ b/frontend/components/home/css/home.css
@@ -22,6 +22,7 @@ home .homeContainer {
     height: 100%;
     overflow: hidden; 
     position: relative;
+    background-size: cover;
 }
 
 home h3 {
