ISSUE #514 - Projects are now alphabetical

--- a/frontend/components/account/pug/account-items.pug
+++ b/frontend/components/account/pug/account-items.pug
@@ -26,7 +26,7 @@
 
 						md-list.tree-branch(
 							ng-if="vm.hasViewableModel(project)"
-							ng-repeat="project in account.projects")
+							ng-repeat="project in account.projects | orderBy:'name'")
 
 							div(ng-click="vm.toggleProject(project)" 
 								layout="row")
