--- a/frontend/components/account/pug/account-modelsetting.pug
+++ b/frontend/components/account/pug/account-modelsetting.pug
@@ -27,6 +27,13 @@
 
 			div(layout="row")
 				md-input-container(flex)
+					label 4D Sequence Tag
+					input(type="text", ng-model="vm.fourDSequenceTag")
+					
+				md-input-container(flex)
+
+			div(layout="row")
+				md-input-container(flex)
 					label Issue topic types
 					textarea(type="text", ng-model="vm.topicTypes")
 					.inputHint One line per topic type
