ISSUE #513 - Attempt to fix e2e tests

--- a/frontend/components/account/pug/account-licenses.pug
+++ b/frontend/components/account/pug/account-licenses.pug
@@ -102,6 +102,7 @@
 								md-input-container
 									label Job Title
 									input(
+										id="addJobInput"
 										flex
 										type="text"
 										ng-model="vm.newJob")
