ISSUE #513 - Attempt 3 to fix e2e tests

--- a/frontend/components/account/pug/account-licenses.pug
+++ b/frontend/components/account/pug/account-licenses.pug
@@ -6,7 +6,7 @@
 
 		md-tabs(md-dynamic-height, md-border-bottom, ng-if="true") 
 
-			md-tab(label="Licences" id="licenceLicences")
+			md-tab(label="Licences")
 				.userContent
 					div.loadingText(
 						layout-align="center center"
@@ -93,7 +93,7 @@
 										=" "
 										a(href="", ng-click="vm.goToBillingPage()") Billing Page
 			// Add a job
-			md-tab(label="Jobs" id="licenceJobs")
+			md-tab(label="Jobs")
 				.userContent
 					md-content#accountJobList
 						md-subheader Add a job
