ISSUE #510 - Fix links, back button, signup error

--- a/frontend/components/password-forgot/pug/password-forgot.pug
+++ b/frontend/components/password-forgot/pug/password-forgot.pug
@@ -13,7 +13,7 @@
 
 		md-toolbar
 			.md-toolbar-tools
-				h2 Forgot password
+				h2 Forgot Password
 		.userContent(layout="column")
 			p Please enter your username and email
 			md-input-container.md-block
