--- a/frontend/components/sign-up/pug/sign-up.pug
+++ b/frontend/components/sign-up/pug/sign-up.pug
@@ -87,4 +87,4 @@
 
 					div.bottom-links
 						a.registerLinks(target="_blank", rel="noopener", href="http://3drepo.org/pricing/") Pricing
-						a.registerLinks(href="/") Log in
+						a.registerLinks(href="" ng-click="vm.goToLoginPage()") Log in
