ISSUE #549 - WIP e2e tests for viewer

--- a/frontend/components/right-panel/pug/right-panel.pug
+++ b/frontend/components/right-panel/pug/right-panel.pug
@@ -4,6 +4,7 @@
 
 		// META DATA TOOL
 		md-button.md-accent.md-fab.md-mini(
+			id="metadataButton"
 			aria-label="Meta"
 			ng-click="vm.toggleAutoMetaData()"
 			ng-disabled="vm.measureDisabled"
@@ -16,6 +17,7 @@
 		
 		// MEASURE TOOL
 		md-button.md-accent.md-fab.md-mini(
+			id="measureButton"
 			aria-label="Measure"
 			ng-click="vm.toggleMeasure()"
 			ng-disabled="vm.measureDisabled"
