ISSUE #549 - More tests for viewer

--- a/frontend/components/right-panel/pug/right-panel.pug
+++ b/frontend/components/right-panel/pug/right-panel.pug
@@ -8,7 +8,7 @@
 			aria-label="Meta"
 			ng-click="vm.toggleAutoMetaData()"
 			ng-disabled="vm.measureDisabled"
-			style="background:{{vm.metaBackground}}")
+			style="background-color:{{vm.metaBackground}}")
 
 			md-tooltip(ng-if="vm.metaData" md-direction="left") Disable
 			md-tooltip(ng-if="!vm.metaData" md-direction="left") Enable
@@ -21,7 +21,7 @@
 			aria-label="Measure"
 			ng-click="vm.toggleMeasure()"
 			ng-disabled="vm.measureDisabled"
-			style="background:{{vm.measureBackground}}")
+			style="background-color:{{vm.measureBackground}}")
 			
 			md-tooltip(md-direction="left") Measure
 			md-icon.angular-material-icons straighten
