--- a/frontend/components/account/pug/federation-dialog.pug
+++ b/frontend/components/account/pug/federation-dialog.pug
@@ -62,6 +62,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 						label Unit
 						md-select(ng-model="vm.federationData.unit")
 							md-option(
+								ng-disabled="true"
 								ng-repeat="unit in vm.units", 
 								value="{{unit.value}}"
 								selected
