ISSUE #564 - Attempt to make federation dialog more consistent in size

--- a/frontend/components/account/pug/federation-dialog.pug
+++ b/frontend/components/account/pug/federation-dialog.pug
@@ -1,4 +1,9 @@
-md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50")
+md-dialog#federationDialog(
+	aria-label="Federation", 
+	flex="70"
+	flex-gt-md="60"
+	flex-gt-lg="50")
+
 	md-toolbar
 		.md-toolbar-tools
 			h2 Federation
