--- a/frontend/components/panel/pug/panel-card-option-menu.pug
+++ b/frontend/components/panel/pug/panel-card-option-menu.pug
@@ -1,9 +1,12 @@
 md-menu(md-position-mode="target-right target", md-offset="2 14")
-	md-button.md-icon-button(aria-label="Menu", ng-click="$mdOpenMenu($event)")
+	md-button.md-icon-button(
+		aria-label="Menu"
+		ng-click="$mdOpenMenu($event)")
 		md-icon.angular-material-icons more_vert
 	md-menu-content(width="4" style="max-height:none")
 		md-menu-item(
-			ng-repeat="menuItem in vm.getUniqueMenuItems()")
+			ng-repeat="menuItem in vm.getUniqueMenuItems()"
+			ng-if="!menuItem.hidden")
 			md-button(ng-click="vm.menuItemSelected($index)")
 				div(layout="column" flex)
 					md-divider(ng-if="menuItem.upperDivider" flex)
