--- a/frontend/components/password-change/pug/password-change.pug
+++ b/frontend/components/password-change/pug/password-change.pug
@@ -8,11 +8,20 @@
 				md-input-container.md-block
 					label New Password
 					input(type='password', ng-model='vm.newPassword', ng-required, ng-keypress="vm.passwordChange($event)")
-				div(layout="column", layout-align="start start")
-					md-button.md-raised.md-accent(ng-click="vm.passwordChange()") Set Password
-					div(layout="row", layout-align="start")
-						h3(style="color:{{vm.messageColor}}") {{vm.message}}
-						md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
+				div(
+					layout="row"
+					layout-align="center center"
+					flex="100")
+					md-button.md-raised.md-accent(
+						layout="row"
+						flex="90"
+						layout-align="center center"
+						ng-disabled="vm.buttonDisabled"
+						ng-click="vm.passwordChange()") Set Password
+						
+				div(layout="row", layout-align="start")
+					h3(style="color:{{vm.messageColor}}") {{vm.message}}
+					md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
 
 			div(layout="column", layout-align="start start", ng-if="vm.passwordChanged")
 				p(style="color:{{vm.messageColor}}") {{vm.message}}
