--- a/frontend/components/password-forgot/pug/password-forgot.pug
+++ b/frontend/components/password-forgot/pug/password-forgot.pug
@@ -27,6 +27,7 @@
 
 				md-button.md-raised.md-accent(
 					flex="90"
+					ng-disabled="vm.buttonDisabled === true"
 					ng-click="vm.requestPasswordChange()") Request Password Change
 
 				div(layout="row", layout-align="start center")
