--- a/frontend/components/issues/pug/issues-list.pug
+++ b/frontend/components/issues/pug/issues-list.pug
@@ -17,7 +17,7 @@
 			.issueJustClosed(ng-if="issue.justClosed" flex="none")
 				.closedText This issue is now closed
 			issues-list-item(
-				ng-disabled="!vm.modelLoaded"
+				ng-disabled="!vm.loaded.model"
 				data="issue"
 				user-job="vm.userJob")
 
