ISSUE #564 - Refactor code around issue list and issue selection

--- a/frontend/components/issues/pug/issues-list.pug
+++ b/frontend/components/issues/pug/issues-list.pug
@@ -9,9 +9,9 @@
 		.issueListItem(
 			ng-repeat="issue in vm.issuesToShow track by $index"
 			layout="column"
-			ng-click="vm.select($event, issue)"
+			ng-click="vm.select(issue)"
 			ng-mouseenter="vm.setFocus(issue, $index)"
-			ng-mouseleave="vm.removeFocus($event, issue)"
+			ng-mouseleave="vm.removeFocus(issue)"
 			ng-class="{issueListItemFocus: issue.focus}")
 
 			.issueJustClosed(ng-if="issue.justClosed" flex="none")
