--- a/frontend/components/account/pug/federation-dialog.pug
+++ b/frontend/components/account/pug/federation-dialog.pug
@@ -66,7 +66,7 @@ md-dialog#federationDialog(
 					md-input-container(flex="50")
 						label Unit
 						md-select(
-							ng-disabled="true"
+							ng-disabled="vm.federadtionData._isEdit"
 							ng-model="vm.federationData.unit")
 							md-option(
 								ng-repeat="unit in vm.units", 
