--- a/frontend/components/issues/pug/issues.pug
+++ b/frontend/components/issues/pug/issues.pug
@@ -56,11 +56,13 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 #issuesAddButton(ng-if="vm.showAddButton", layout-margin)
 	span.addHint(ng-if="!vm.canAddIssue") You don't have permission to add an issue
 	span.addHint(ng-if="vm.canAddIssue && !vm.modelLoaded()") You can add an issue after model load
+	
 	md-button.md-accent.md-fab.md-mini(
+		id="addIssue"
 		aria-label="Add"
 		ng-click="vm.editIssue()"
 		ng-disabled="!vm.canAddIssue || !vm.modelLoaded()")
-
+		
 		md-icon.angular-material-icons add
 
 
