ISSUE #565 - WIP permissions refactoring

--- a/frontend/components/issues/pug/issue.pug
+++ b/frontend/components/issues/pug/issue.pug
@@ -51,23 +51,42 @@ div.heightFix(
 			div(layout="row")
 				md-input-container.issueItemStatus(flex)
 					label Priority
-					md-select(ng-model="vm.issueData.priority", ng-change="vm.statusChange()", ng-disabled="!vm.canUpdate")
+					md-select(
+						ng-model="vm.issueData.priority"
+						ng-change="vm.statusChange()"
+						ng-disabled="!vm.canChangePriority()")
+				
 						md-option(ng-repeat="priority in vm.priorities", value="{{priority.value}}") {{priority.label}}
+				
 				md-input-container.issueItemStatus(flex)
 					label Status
-					md-select(ng-model="vm.issueData.status", ng-change="vm.statusChange()", ng-disabled="!vm.canUpdate")
+					md-select(
+						ng-model="vm.issueData.status"
+						ng-change="vm.statusChange()"
+						ng-disabled="!vm.canChangeStatus()")
+						
 						md-option(
 							ng-repeat="status in vm.statuses"
+							ng-disabled="vm.disableStatusOption(status)"
 							value="{{status.value}}") {{status.label}}
 
 			div(layout="row")
 				md-input-container(flex)
 					label Assign
-					md-select(ng-model="vm.issueData.assigned_roles[0]", ng-change="vm.statusChange()", ng-disabled="!vm.canUpdate")
+					md-select(
+						ng-model="vm.issueData.assigned_roles[0]"
+						ng-change="vm.statusChange()"
+						ng-disabled="!vm.canChangeAssigned()")
+
 						md-option(ng-repeat="job in vm.modelJobs", value="{{job}}") {{job}}
+				
 				md-input-container(flex)
 					label Type
-					md-select(ng-model="vm.issueData.topic_type", ng-change="vm.statusChange()", ng-disabled="!vm.canUpdate")
+					md-select(
+						ng-model="vm.issueData.topic_type"
+						ng-change="vm.statusChange()"
+						ng-disabled="!vm.canChangeType()")
+
 						md-option(ng-repeat="type in vm.topic_types", value="{{type.value}}") {{type.label}}
 
 		.issueItemContainer#issueDescriptionContainer(layout="column", layout-align="start", flex)
@@ -91,7 +110,7 @@ div.heightFix(
 							ng-focus="vm.textInputHasFocus(true)"
 							ng-blur="vm.textInputHasFocus(false)")
 						.issueTextActions(layout="row", ng-if="vm.canEditDescription")
-							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="vm.toggleEditDescription($event)", ng-if="vm.canUpdate")
+							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="vm.toggleEditDescription($event)", ng-if="vm.checkCanComment()")
 								md-tooltip(md-direction="bottom") edit
 								md-icon.angular-material-icons(style="color:{{vm.editCommentColor}}") mode_edit
 				
@@ -202,10 +221,9 @@ md-divider
 				ng-change="vm.commentChange()"
 				ng-focus="vm.textInputHasFocus(true)"
 				ng-blur="vm.textInputHasFocus(false)"
-				ng-disabled="!vm.canComment"
+				ng-disabled="!vm.checkCanComment()"
 				ng-required="true")
 
-			
 
 		div(layout="row" layout-align="start center")
 			md-button.md-icon-button(
@@ -229,7 +247,7 @@ md-divider
 	//span(
 		layout="row" 
 		layout-align="center center"
-		ng-if="vm.submitDisabled && vm.canComment" 
+		ng-if="vm.submitDisabled && vm.checkCanComment" 
 		style="color: #9e9e9e;") {{ vm.disabledReason }}
 
 
