--- a/frontend/components/account/pug/federation-dialog.pug
+++ b/frontend/components/account/pug/federation-dialog.pug
@@ -6,7 +6,8 @@ md-dialog#federationDialog(
 
 	md-toolbar
 		.md-toolbar-tools
-			h2 Federation
+			h2(ng-if="vm.federationData._isEdit") Edit Federation
+			h2(ng-if="!vm.federationData._isEdit") New Federation
 			span(flex)
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
