--- a/frontend/components/account/pug/project-dialog.pug
+++ b/frontend/components/account/pug/project-dialog.pug
@@ -1,8 +1,8 @@
 md-dialog.newModelDialog(aria-label="New project")
 	md-toolbar
 		.md-toolbar-tools
-			h2(ng-if="vm.newProjectName == ''") New Project
-			h2(ng-if="vm.newProjectName != ''") Edit Project
+			h2(ng-if="vm.projectData.newProjectName == ''") New Project
+			h2(ng-if="vm.projectData.newProjectName != ''") Edit Project
 			span(flex)
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
