ISSUE #549 - Fix current tests for viewer/issues

--- a/frontend/components/bottom-buttons/pug/bottom-buttons.pug
+++ b/frontend/components/bottom-buttons/pug/bottom-buttons.pug
@@ -8,7 +8,8 @@ div(
 	#leftButtons(ng-if="vm.showButtons", layout="row")
 		span(ng-repeat="button in vm.leftButtons", ng-click="button.click()" layout="column")
 			
-			md-button.md-fab.md-mini.md-icon-button.md-accent.md-ink-ripple.actionButton(aria-label="{{button.label}}")
+			md-button.md-fab.md-mini.md-icon-button.md-accent.md-ink-ripple.actionButton(
+				aria-label="{{button.label}}")
 				svg(width="24px" height="24px" viewBox="0 0 24 24")
 					path(fill="#ffffff" d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z")
 					
