--- a/frontend/components/issues/pug/issue.pug
+++ b/frontend/components/issues/pug/issue.pug
@@ -17,8 +17,13 @@ div.heightFix(
 
 				div(layout="row", flex, layout-align="space-between")
 					div(layout="row", flex)
-						#issueRoleIndicator(ng-style="{backgroundColor: vm.issueRoleColor}")
-						md-input-container#issueTitleInput(ng-if="!vm.data", flex, md-no-float)
+						#issueRoleIndicator(ng-style="{backgroundColor: vm.issueData.issueRoleColor}")
+						
+						md-input-container#issueTitleInput(
+							ng-if="!vm.data"
+							flex
+							md-no-float)
+
 							input(
 								type="text"
 								ng-model="vm.issueData.name"
@@ -31,7 +36,8 @@ div.heightFix(
 								required
 								placeholder="Title",
 								ng-click="vm.titleInputClick($event)")
-						label#issueTitle(ng-if="vm.data") {{vm.issueData.name}}
+
+						label#issueTitle(ng-if="vm.data") {{vm.issueData.title}}
 
 					span(flex="5")
 					md-button.md-icon-button#additionalInfoButton(aria-label="Status Toggle")
@@ -41,7 +47,9 @@ div.heightFix(
 		// Info
 		.issueItemContainer#issueInfoArea(layout="row", layout-align="start center", flex="none", ng-if="vm.showAdditional")
 			div(flex="10")
-				md-icon.angular-material-icons#issueStatus(style="color:{{vm.statusIcon.colour}}") {{vm.statusIcon.icon}}
+				md-icon.angular-material-icons#issueStatus(
+					style="color:{{vm.issueData.statusIcon.colour}}") {{vm.issueData.statusIcon.icon}}
+
 			.issueIssueOwner(ng-if="vm.data", layout="row", layout-align="space-between", flex)
 				label {{vm.data.owner}}
 				label {{vm.data.timeStamp}}
@@ -92,7 +100,7 @@ div.heightFix(
 		.issueItemContainer#issueDescriptionContainer(layout="column", layout-align="start", flex)
 			div(layout="column", layout-align="start", flex)
 				div(ng-if="!vm.data", flex, layout="column")
-					md-input-container#descriptionText(ng-if="!vm.hideDescription")
+					md-input-container#descriptionText(ng-if="vm.issueData.desc")
 						label Description
 						textarea(
 							ng-model="vm.issueData.desc"
@@ -132,9 +140,9 @@ div.heightFix(
 								
 				
 				.issueThumbnail(
-					ng-if="vm.descriptionThumbnail"
+					ng-if="vm.issueData.descriptionThumbnail"
 					ng-click="vm.showScreenShot($event, vm.issueData.viewpoint)")
-					img.issueThumbnailImage(ng-src="{{vm.descriptionThumbnail}}")
+					img.issueThumbnailImage(ng-src="{{vm.issueData.descriptionThumbnail}}")
 
 	
 	#descriptionAndComments(flex, , ng-if="vm.issueData.comments.length > 0")
@@ -143,7 +151,7 @@ div.heightFix(
 		// Comments
 		.issueItemContainer(layout="column", layout-align="start", flex)
 			label.issuesLabel Comments
-			div(ng-repeat="comment in vm.issueData.comments", layout="column", layout-align="start", flex)
+			div(ng-repeat="comment in vm.issueData.comments track by comment._id", layout="column", layout-align="start", flex)
 				div(ng-click="vm.showViewpoint($event, comment.viewpoint)"
 					layout="column"
 					layout-align="start"
