--- a/frontend/components/issues/pug/issues.pug
+++ b/frontend/components/issues/pug/issues.pug
@@ -10,14 +10,14 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 
 md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15", ng-if="vm.importingBCF")
 
-#issuesContent(ng-switch="vm.toShow")
+#issuesContent
 
 	// Issues list
 	issues-list(
-		ng-switch-when="showIssues"
+		ng-if="vm.toShow === 'showIssues'"
+		issues-to-show="vm.issuesToShow"
 		account="vm.account"
 		model="vm.model"
-		all-issues="vm.issues"
 		filter-text="vm.filterText"
 		import-bcf="vm.importBcf(file)"
 		event="vm.event"
@@ -28,17 +28,15 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 		menu-option="vm.selectedMenuOption"
 		user-job="vm.modelUserJob"
 		tree-map="vm.treeMap"
-		selected-issue="vm.selectedIssue"
-		display-issue="vm.displayIssue"
 		issue-display="vm.issueDisplay"
 		available-jobs="vm.availableJobs")
 
 	// Issue
 	issue(
-		ng-switch-when="showIssue"
+		ng-if="vm.toShow === 'showIssue'"
 		account="vm.account"
-		model="vm.model"
 		data="vm.selectedIssue"
+		model="vm.model"
 		keys-down="vm.keysDown"
 		exit="vm.editIssueExit(issue)"
 		model-settings="vm.modelSettings"
@@ -47,7 +45,6 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 		content-height="vm.setContentHeight(height)"
 		selected-objects="vm.selectedObjects"
 		revision="vm.revision"
-		selected-issue-loaded="vm.selectedIssueLoaded"
 		set-initial-selected-objects="vm.setInitialSelectedObjects({selectedObjects: selectedObjects})"
 		user-job="vm.modelUserJob"
 		available-jobs="vm.availableJobs")
